syntax = "proto3";

import "google/protobuf/timestamp.proto";
option java_outer_classname = "SubscriptionMessage";
option java_package = "com.ebs.project.proto";


message SubscriptionDTO {
  ValueStringRestriction companyName = 1;
  ValueDoubleRestriction drop = 2;
  ValueDoubleRestriction value = 3;
  ValueDoubleRestriction variation = 4;
  ValueDateRestriction date = 5;

  string host = 6;
  string virtualHost = 7;
  string username = 8;
  string password = 9;
  int32 port = 10;
  string queueName = 11;
  int32 originalPort = 12;
  string originalQueueName = 13;

  message ValueStringRestriction {
    string operation = 1;
    string value = 2;
  }

  message ValueDoubleRestriction {
    string operation = 1;
    double value = 2;
  }

  message ValueDateRestriction {
    string operation = 1;
    google.protobuf.Timestamp value = 2;
  }
}
